# punch-card

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ebcdic.rs  hollerith.rs  ibm1130.rs  lib.rs  punch_card.rs
crates/web/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/web/src/: lib.rs
crates/web/src/components/: app.rs  mod.rs  punch_card.rs  tabs.rs  text_input.rs
docs/: chat.txt  implementation.md  index.html  punch-card-web-66b5df7a90afda41.js  punch-card-web-66b5df7a90afda41_bg.wasm  styles-580f4e16a01c6996.css
notes/: github-pages-setup.md  research.txt
