[package]
name = "punch-card-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
punch-card-core = { path = "../core" }
yew = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-file = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
